--- a/app/src/main/res/layout/activity_list_files.xml
+++ b/app/src/main/res/layout/activity_list_files.xml
@@ -31,9 +31,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textAlignment="center"
         android:text="@string/text_empty"
+        android:layout_centerInParent="true"
         android:id="@+id/status_empty"
         android:textColor="@color/colorPrimary"/>
 
